@@ -3,8 +3,12 @@ package org.blue.helper.study.java.jvm;
 import java.util.ArrayList;
 import java.util.List;
 
+/**
+ * -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError
+ */
 public class HeapOOM {
     static class OOMObject{
+        public byte[] placeholder = new byte[64 * 1024];
     }
 
     public static void main(String[] args) {
